Log in with Facebook link activated

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<div class="dif">
 				<div class="fb">
 					<img src="facebook.png" alt="facebook">
-					<p>Log in with Facebook</p>
+					<a href="#"><p>Log in with Facebook</p></a>
 				</div>
 				<div class="forgot">
 					<a href="#">Forgot password?</a>
@@ -65,7 +65,7 @@
 			</ul>
 		</div>
 		<div class="copyright">
-			© 2019 INSTAGRAM
+			© 2024 INSTAGRAM
 		</div>
 	</div>
 </div>
